<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Edit_Text_Dist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dist_ncia"
        android:inputType="number"
        android:textColorHint="@color/gray"
        android:textSize="24sp" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/total_de_quil_metros"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Edit_Text_Preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/pre_o"
        android:inputType="number"
        android:textColorHint="@color/gray"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/pre_o_por_litro"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Edit_Text_Auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomia"
        android:inputType="number"
        android:textColorHint="@color/gray"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:text="@string/kms_por_litro"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:text="@string/seu_gasto_total_ser_de"
        android:textAllCaps="true"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/Text_Gasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/ValorTotal"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <Button
        android:id="@+id/Button_Calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:padding="16dp"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:textSize="20sp" />


</LinearLayout>